Closed
Bug 138500
Opened 23 years ago
Closed 23 years ago
Clicking on link to get java plugin reloads page instead of pointing to installer - M1RC1 M1BR Trunk crash [@ ntdll.dll - nsXULDocument::CreateElement]
Categories
(Core Graveyard :: Plug-ins, defect, P1)
Tracking
(Not tracked)
VERIFIED
FIXED
mozilla1.0
People
(Reporter: bsharroc, Assigned: peterl-bugs)
References
()
Details
(Keywords: regression, topcrash+, Whiteboard: [ADT1])
Attachments
(1 file, 1 obsolete file)
|
1.06 KB,
patch
|
serhunt
:
review+
jag+mozilla
:
superreview+
|
Details | Diff | Splinter Review |
Uninstalled older version of Mozilla and Java 1.3.1. Removed old mozilla.org
directory and personal java folders under my profile. Rebooted laptop.
Installed RC1 - browser only. After browser starts up, go to java.sun.com and
click on link to get java plugin. Click Get the Plug-in in popup window and
Mozilla immediately crashes. Sent talkback data.
Comment 1•23 years ago
|
||
-->my bug...fix comming up...
Comment 2•23 years ago
|
||
I had slightly changed the way Java mime-types are sent to the server.....I
added "mimetype=" and forgot to increase the size of the allocated string.
Comment 3•23 years ago
|
||
Updated•23 years ago
|
Attachment #80001 -
Attachment is obsolete: true
Comment on attachment 80011 [details] [diff] [review]
patch v.2
r=av
Attachment #80011 -
Flags: review+
Updated•23 years ago
|
QA Contact: shrir → pmac
Comment 5•23 years ago
|
||
Comment on attachment 80011 [details] [diff] [review]
patch v.2
sr=jag
Attachment #80011 -
Flags: superreview+
Comment 6•23 years ago
|
||
adding markers
Comment 7•23 years ago
|
||
smoketest blocker..taking back from pmac.
Keywords: smoketest
QA Contact: pmac → shrir
Comment 8•23 years ago
|
||
I assume the reporter tested this on today's trunk. To be more specific..I see
it on today's branch. So is the fix going in both ?
Comment 9•23 years ago
|
||
a=asa and leaf, patch in trunk and branch, marking FIXED.
Status: NEW → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
Comment 10•23 years ago
|
||
*** Bug 138650 has been marked as a duplicate of this bug. ***
Comment 11•23 years ago
|
||
*** Bug 138881 has been marked as a duplicate of this bug. ***
Comment 12•23 years ago
|
||
something bizzare is going on. This works ok on win2k, crashes on my NT..
On win98, the same page opens up after I click on the default plugin., reopening
for w98 for now. Chekcing if it's just my NT that is crashing or what..
Status: RESOLVED → REOPENED
OS: Windows 2000 → Windows 98
Resolution: FIXED → ---
Comment 13•23 years ago
|
||
resummarizing...since w98 did not crash.
Summary: Installing java plug-in crashes RC1 → [Clicking on link to get java plugin reloads page instead of pointing to installer
Comment 14•23 years ago
|
||
downgrading morphed bug from smoketest blocker
Severity: blocker → critical
Keywords: smoketest
Comment 15•23 years ago
|
||
*** Bug 139296 has been marked as a duplicate of this bug. ***
Comment 16•23 years ago
|
||
Adding topcrash+ keyword and [@ ntdll.dll - nsXULDocument::CreateElement] to
summary from duped bug 139296.
Also adding M1RC1 (Mozilla1.0 RC1), M1BR (Mozilla1.0 Branch) and Trunk to
summary for tracking.
Keywords: topcrash+
Summary: [Clicking on link to get java plugin reloads page instead of pointing to installer → Clicking on link to get java plugin reloads page instead of pointing to installer - M1RC1 M1BR Trunk crash [@ ntdll.dll - nsXULDocument::CreateElement]
Comment 17•23 years ago
|
||
The crash should be fixed in today's builds. If this crash is still appearing in
talback data from today's builds, please let me know.
Keywords: crash
Comment 18•23 years ago
|
||
adding adt1.0.0+. Please check this in to the branch as soon as possible and
add the fixed1.0.0 keyword.
Keywords: adt1.0.0+
Comment 19•23 years ago
|
||
ok,I did some more testing on this with 0423 branch build and the results are as
follows:
On win98 - The same page opens when I click on the default plugin (no crash)
On WinNT - The browser crashes ( afterI click on the default plugin)
On Win 2k/Win XP - Things work flawlessly ( tried ipix..got correctly redirected
and got the plugin installed with no problem..same with quicktime except that I
was pointed to the installer file since there is no xpi..but the technique was
correct)
Am filing another bug for the crasher on NT with a testcase.
Comment 20•23 years ago
|
||
filed bug 139529 for NT problem.
Comment 21•23 years ago
|
||
Putterman: This was checked into the Mozilla1.0 branch on 4/19 (see comment #9).
Peter: You wanna add the fixed1.0.0 keyword?
Marking this fixed per Shrirang's testing and recent Talkback data. Haven't
seen any crashes involving the java plug-in link since the fix went in.
Status: REOPENED → RESOLVED
Closed: 23 years ago → 23 years ago
Resolution: --- → FIXED
Updated•23 years ago
|
Keywords: fixed1.0.0
Comment 22•23 years ago
|
||
yes, this crash is fixed now on today's brnahc build on windows. But the java
insatllation issue still remains open, that is bug 139240
Keywords: verified1.0.0
Comment 23•23 years ago
|
||
*** Bug 141704 has been marked as a duplicate of this bug. ***
Comment 25•23 years ago
|
||
*** Bug 141860 has been marked as a duplicate of this bug. ***
Comment 26•23 years ago
|
||
*** Bug 143018 has been marked as a duplicate of this bug. ***
Comment 27•23 years ago
|
||
*** Bug 143095 has been marked as a duplicate of this bug. ***
Updated•3 years ago
|
Product: Core → Core Graveyard
You need to log in
before you can comment on or make changes to this bug.
Description
•