Fixing smoketest blocker bug 138500 r=av sr=jag a=leaf